--- a/Pagina2.html
+++ b/Pagina2.html
@@ -18,5 +18,19 @@
             </ul>
         </nav>
     </header>
+
+    <footer>
+        <img src="imagenes/logo.jpg" alt="Logo" width="75" height="65">
+        <ul>
+            <li><a href="">Medios de Pago</a></li>
+            <li><a href="">Nuestras Redes</a></li>
+            <li><a href="">Contacto</a></li>
+        </ul>
+     
+    </footer>
+
+
+
+
 </body>
 </html>
