--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
         </nav>
     </header>
   
-    <h1>Esta es mi prueba de un TITULO</h1>
+    <h1>BIENVENIDOS A "POKER PESCA"</h1>
 
-    <p>Aca estoy probando un parrafo en mi pagina de Inicio</p>
+    <p>En nuestra web podras encontrar todo lo que buscas para la Pesca Deportiva</p>
 
-
+    <footer>
+        <img src="imagenes/logo.jpg" alt="Logo" width="75" height="65">
+        <ul>
+            <li><a href="">Medios de Pago</a></li>
+            <li><a href="">Nuestras Redes</a></li>
+            <li><a href="">Contacto</a></li>
+        </ul>
+     
+    </footer>
     
 </body>
 </html>
