Agrego main y secciones a cada una de las paginas

--- a/Pagina3.html
+++ b/Pagina3.html
@@ -18,6 +18,14 @@
         </nav>
     </header>
 
+    <main>
+        <!-- Agrego una seccion a modo de ejemplo -->
+        <section>
+            <h2>Seccion 1 en Pagina 3</h2>
+            <p>Solo agrego una seccion para ir probando herramientas</p>
+        </section>
+    </main>
+
     <footer>
         <img src="imagenes/logo.jpg" alt="Logo" width="75" height="65">
         <ul>
