--- a/index.html
+++ b/index.html
@@ -18,9 +18,50 @@
         </nav>
     </header>
   
-    <h1>BIENVENIDOS A "POKER PESCA"</h1>
 
-    <p>En nuestra web podras encontrar todo lo que buscas para la Pesca Deportiva</p>
+    <main>
+        <!-- Voy con el main (probando insertar comentarios) -->
+        <section>
+            <div>
+                <h1>BIENVENIDOS A "POKER PESCA"</h1>
+               
+                <p>Somos una empresa familiar reconocida por su trayectoria y seriedad, líder en el mercado.
+                Atendemos a clientes de todo el país, quienes adquieren nuestros productos a distancia o nos visitan.
+                Ofrecer la mejor opción de compra del mercado, basándonos en los siguientes principios: 
+                El mejor precio.La más rápida y eficiente atención personalizada.
+                Garantía total de satisfacción.</p>
+
+                <a href="">Conocenos un poco más</a>
+            </div>
+            <div>
+                <img src="Imagenes/pesca_1.jpg" alt="Imagen de la primera seccion" width="600"
+                    height="400">
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <!-- Segunda seccion -->
+                <h2>TAMBIEN TENEMOS TODO PARA EL OUTDOOR</h2>
+                <p>Todo lo que estas buscando para tu actividad al aire libre</p>
+                <video src="Videos/Video_1.mp4" controls>Video Muestra WEB</video>
+            </div>
+        </section>
+
+        <section>
+            <!-- Tercera seccion, aca no se me ocurre que mas agregar -->
+            <h2>TERCERA SECCION DE LA PAGINA</h2>
+            <P>La actividad pesquera y acuícola consiste en la captura y cría de peces, 
+                crustáceos, moluscos y otros organismos de aguas saladas y dulces para 
+                aprovechar algunos recursos de la Naturaleza sin transformarlos. 
+                Estas actividades, además de proporcionar alimento, representan una 
+                fuente de ingresos para muchas familias.</P>
+        </section>
+
+    </main>
+
+
+
 
     <footer>
         <img src="imagenes/logo.jpg" alt="Logo" width="75" height="65">
