--- a/Pagina1.html
+++ b/Pagina1.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 1</title>
+
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <header>
         <img src="imagenes/logo.jpg" alt="Logo" width="150" height="130">
@@ -34,7 +38,8 @@
             <li><a href="">Nuestras Redes</a></li>
             <li><a href="">Contacto</a></li>
         </ul>
-     
+
     </footer>
 </body>
+
 </html>
